@@ -1,4 +1,4 @@
-.TH IRONSEED 6 2020-10-12
+.TH IRONSEED 6 2024-04-11
 .SH NAME
 is - Ironseed
 .SH SYNOPSIS
@@ -16,6 +16,10 @@ To counter them an underground movement was initiated and an elaborate plan was 
 
 As the captain, you are awakened along with the crew by an alien attack...
 
+.SH "EXTRA IN-GAME KEYS"
+.IP
+ALT-F11 will change windowed/fullscreen
+
 .SH OPTIONS
 Valid command line options:
 .TP
@@ -27,6 +31,8 @@ The following environment variables are supported:
 Stops game from trying to initializing audio.
 .IP "DEBUG=1"
 Shows game initialization info.
+.IP "SDL_QUALITY=nearest|linear|best"
+Changes how SDL extrapolates original 320x200 resulution to your screen resolution
 .SH AUTHOR
 The Ironseed is SDL port of 1994 DOS game by Channel 7.
 See \fI/usr/share/doc/ironseed/copyright\fR for a complete list of authors.
